--- a/templates/QrModule/QrRegeneration.html
+++ b/templates/QrModule/QrRegeneration.html
@@ -14,7 +14,10 @@
 
     <div id="qrCodeScanner" style="display:none;"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/instascan/1.0.1/instascan.min.js">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/instascan/2.0.0-rc.2/dist/index.js">
+
+
 
         // Initialize Instascan scanner
         let scanner = new Instascan.Scanner({ video: document.getElementById('qrCodeScanner') });
